src/test/ui/consts/const-call.stderr
error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-call.rs:6:17
   |
LL |     let _ = [0; f(2)];
   |                 ^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/const-call.rs:6:17
   |
LL |     let _ = [0; f(2)];
   |                 ^^^^ calling non-const function `f`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0015, E0080.
For more information about an error, try `rustc --explain E0015`.
